created index file and am inporting the server to it. installed nodemon and it is running successfully

--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
- {
+{
   "name": "node-api1-project",
   "version": "1.0.0",
   "description": "## Introduction",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/chukalicious/node-api1-project#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7"
   }
 }
